Fix misalign bug

--- a/css/indexpage.css
+++ b/css/indexpage.css
@@ -115,7 +115,7 @@ div.teamtext {
 
 .snsButton {
     color: white;
-    width: calc(50% - 10px - 2px - 10px);
+    width: calc(50% - 13px);
     height: fit-content;
     box-shadow: 0px 5px 10px black;
     border-radius: 7px;
@@ -135,9 +135,9 @@ div.teamtext {
 
 .snsButton:hover {
     z-index: 20;
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition: transform 0.4s;
-    transition-timing-function: cubic-bezier(0.13, 0.99, 0.33, 2.13);
+    transition-timing-function: cubic-bezier(0.13, 0.99, 0.33, 1.85);
 }
 
 @media(max-width:1300px) {
